--- a/sass/web.site/modules/centerpage/_ressort-heading.sass
+++ b/sass/web.site/modules/centerpage/_ressort-heading.sass
@@ -1,7 +1,7 @@
 
 // TODO: this could be used for Schlagzeilen, Momentaufnahme, and more
 
-.centerpage-ressort-heading
+.cp-ressort-heading
 	position: relative
 	&__title
 		color: $zon-charcoal
