--- a/sass/web.site/modules/centerpage/_centerpage.sass
+++ b/sass/web.site/modules/centerpage/_centerpage.sass
@@ -16,6 +16,14 @@
 		padding: 0
 	&--gallery
 		padding: 0
+	// TODO: --gallery Trennlinie zum nächsten Ressort: 1px solid #CCC.
+	//       Aber: cp-region haben Margin statt Bottom. Soll das für die --gallery geändert werden???
+	//       Andere Regions müssten doch auch den Border haben.
+	//       Wie ist es dort gelöst?
+	//       => Gar nicht. Es gibt keine Borders. Wenn, dann böte sich ein border-top an, weil
+	//          die alle keinen margin-top haben.
+	//       => Wenn das nächste Ressort z.B. Spektrum ist, dann braucht man auch keinen Border.
+	//       => Idealerweise weiß eine Region, ob sie sich nach oben abgrenzen muss.
 
 .cp-area
 	padding: 0 $cp-padding
@@ -31,6 +39,9 @@
 		max-width: remify(660px)
 		margin-left: auto
 		margin-right: auto
+	&--gallery
+		background-color: $zon_lighter_grey
+		padding: remify(20px)
 	+respond-min($break-areas)
 		&--major
 			width: 66.66%
