--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -19,7 +19,8 @@
 		position: absolute
 		text-align: center
 		top: 50%
-		transform: translate(0, -60%)
+		@include transform(translate(0, -60%))
+
 		width: 100%
 		z-index: 1
 		+respond-min($break-tablet-min)
