--- a/sass/web.site/modules/centerpage/_snapshot.sass
+++ b/sass/web.site/modules/centerpage/_snapshot.sass
@@ -14,19 +14,22 @@
 		margin: 0 (-$petite) remify(14px) (-$petite)
 		+respond-min($break-desktop-min)
 			margin: 0 0 remify(14px) 0
-	&__media-item
-		width: 100%
 
-.js .snapshot
-	display: block // needed for working transition
-	opacity: 0.1
-	+filter(blur(10px))
-	+transition-property(filter, opacity)
-	+transition-duration(2.5s)
-	+transition-timing-function(ease-out)
-	&--uncovered
-		opacity: 1
-		+filter(blur(0px))
+.js
+	.snapshot
+		display: none
+		&--visible
+			display: block // needed for working transition
+		&--uncovered .snapshot__media
+			opacity: 1
+			+filter(blur(0))
+	.snapshot__media
+		opacity: 0.1
+		+filter(blur(10px))
+		+transition-property(filter, opacity)
+		+transition-duration(2.5s)
+		+transition-timing-function(ease-out)
+
 
 .snapshot-readmore
 	color: $grey--mid
