--- a/sass/web.site/modules/centerpage/_snapshot.sass
+++ b/sass/web.site/modules/centerpage/_snapshot.sass
@@ -11,9 +11,13 @@
 		+respond-min($break-desktop-min)
 			font-size: remify(24px)
 	&__media
-		margin: 0 (-$petite) remify(14px) (-$petite)
+		margin: 0 (-$page-padding) remify(14px)
 		+respond-min($break-desktop-min)
 			margin: 0 0 remify(14px) 0
+	&__media-item
+		// needed for correct width while having negative margins
+		// on the embedding .scaled-image container
+		width: 100%
 
 .js
 	.snapshot
