--- a/sass/web.site/modules/centerpage/_snapshot.sass
+++ b/sass/web.site/modules/centerpage/_snapshot.sass
@@ -10,29 +10,27 @@
 		margin-bottom: remify(14px)
 		+respond-min($break-desktop-min)
 			font-size: remify(24px)
-	&__media
+	&__picture
 		margin: 0 (-$page-padding) remify(14px)
 		+respond-min($break-desktop-min)
 			margin: 0 0 remify(14px) 0
-	&__media-item
-		// needed for correct width while having negative margins
-		// on the embedding .scaled-image container
-		width: 100%
+	&__media
+		margin: 0
 
 .js
-	.snapshot
-		display: none
-		&--visible
-			display: block // needed for working transition
-		&--uncovered .snapshot__media
-			opacity: 1
-			+filter(blur(0))
 	.snapshot__media
 		opacity: 0.1
 		+filter(blur(10px))
 		+transition-property(filter, opacity)
 		+transition-duration(2.5s)
 		+transition-timing-function(ease-out)
+	.snapshot
+		display: none
+		&--visible
+			display: block
+		&--uncovered .snapshot__media
+			opacity: 1
+			+filter(blur(0))
 
 
 .snapshot-readmore
