--- a/sass/web.site/modules/centerpage/_snapshot.sass
+++ b/sass/web.site/modules/centerpage/_snapshot.sass
@@ -14,6 +14,8 @@
 		margin: 0 (-$page-padding) remify(14px)
 		+respond-min($break-desktop-min)
 			margin: 0 0 remify(14px) 0
+	&__media-item
+		width: 100%
 
 .js
 	.snapshot__media
