Quickfix: Avoid inappropriate transition in Safari

--- a/sass/web.site/modules/liveblog/_wrapper.sass
+++ b/sass/web.site/modules/liveblog/_wrapper.sass
@@ -1,5 +1,5 @@
 .liveblog
-	margin: 0 (-$page-padding) em(20px)
+	margin: em(20px) (-$page-padding)
 
 .liveblog-text-wrapper
 	+transition(max-height .5s)
@@ -8,7 +8,7 @@
 
 .liveblog-text-wrapper--wrapped
 	cursor: pointer
-	margin: 0 auto em(20px)
+	margin: 0 auto
 	max-width: em(660px)
 	max-height: 5 * 1.4 * em(18px) // 5 lines paragraph text
 	+respond-min($break-desktop-min)
