--- a/sass/web.site/modules/teaser/_teaser-beta.sass
+++ b/sass/web.site/modules/teaser/_teaser-beta.sass
@@ -42,15 +42,18 @@
 		+zon-button-light($margin: remify(14px 6px))
 
 	&__status
+		background: $white
 		display: inline-block
-		height: 17px
-		position: relative
-		right: remify(-12px)
+		height: 23px
+		left: remify(46px)
+		position: absolute
 		vertical-align: middle
-		width: 21px
+		width: 23px
+
 
 .js #beta-toggle-submit
 	display: none
 
-.icon-zon-logo-navigation_close
-	+animation(rotate 1s linear infinite)
+.icon-beta-throbber
+	+animation(rotate 0.6s linear infinite)
+	left: remify(42px)
