--- a/sass/web.site/modules/teaser/_teaser-topic.sass
+++ b/sass/web.site/modules/teaser/_teaser-topic.sass
@@ -26,7 +26,7 @@
 			padding-left: remify(50px)
 			padding-right: remify(24px)
 			text-align: left
-			transform: none
+			+transform(none)
 			top: remify(35px)
 			width: 57%
 		+respond-min($break-desktop-min)
