ZON-1897: Deprecate translate_url filter in favour of more versatile create_url

--- a/src/zeit/web/magazin/templates/inc/cp_area_buzz.html
+++ b/src/zeit/web/magazin/templates/inc/cp_area_buzz.html
@@ -27,7 +27,7 @@ Available attributes:
                         {{ article.teaserSupertitle or article.supertitle }}
                     </p>
                     <p class="cp_buzz__service__list__entry__title">
-                        <a href="{{ article.uniqueId | translate_url }}">{{ article.teaserTitle or article.title }}</a>
+                        <a href="{{ article.uniqueId | create_url }}">{{ article.teaserTitle or article.title }}</a>
                     </p>
                     {% if article.score %}
                     <p class="cp_buzz__service__list__entry__score">
