--- a/src/zeit/web/site/templates/inc/module/playlist.html
+++ b/src/zeit/web/site/templates/inc/module/playlist.html
@@ -33,6 +33,6 @@
             </select>
         </div>
         {# Sind doch gar nicht alle Videos? (NB) #}
-        <a class="video-centerpage-link" href="{{ 'http://xml.zeit.de/video' | translate_url }}">Alle Videos</a>
+        <a class="video-centerpage-link" href="{{ 'http://xml.zeit.de/video' | create_url }}">Alle Videos</a>
     </footer>
 </section>
