--- a/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_nextread_teaser_template.html
+++ b/src/zeit/web/magazin/templates/inc/teaser/abstract/abstract_nextread_teaser_template.html
@@ -20,14 +20,14 @@ All calling templates have to provide:
 {# if we have to display a bg image, prepare it here #}
 {% if self.bg_image() == 'true' %}
     {% if image %}
-        {% set bg_image = 'background-image: url(' + image|default_image_url|default('http://placehold.it/160x90', true) + ')' %}
+        {% set bg_image = 'background-image: url(' + image | default_image_url | default('http://placehold.it/160x90', true) + ')' %}
     {% else %}
         {% set bg_image = 'background-color: #252525;' %}
     {% endif %}
 {% endif %}
 
 <div class="article__nextread__body article__nextread__body--{{ module.multitude }}{% if not image %} article__nextread__body--no-img{% endif %}" style="{{ bg_image }}">
-    <a title="{{ teaser.supertitle }}: {{ teaser.title }}" href="{{ teaser.uniqueId|translate_url }}">
+    <a title="{{ teaser.supertitle }}: {{ teaser.title }}" href="{{ teaser.uniqueId | create_url }}">
         
         {# display bg image #}
         {% if image and self.teaser_image() == 'true' %}
