--- a/src/zeit/web/site/templates/inc/footer.html
+++ b/src/zeit/web/site/templates/inc/footer.html
@@ -1,4 +1,4 @@
-{% import 'zeit.web.site:templates/macros/footer_macro.tpl' as footer %}
+{% import 'zeit.web.site:templates/macros/footer_macro.tpl' as footer with context %}
     <div class="footer-logo">
         <div class="footer-logo__image">
             {{ footer.footer_logo(view.request) }}
