--- a/sass/web.site/modules/video/_video-text-playbutton.sass
+++ b/sass/web.site/modules/video/_video-text-playbutton.sass
@@ -27,10 +27,8 @@
 		+respond-min($break-phablet-min)
 			+zon-button-dark($color: $white, $margin: 0)
 		+respond-min($break-desktop-min)
+			top: remify(-54px)
 			bottom: auto
-			left: auto
-			margin: remify(0 0 15px 15px)
-			position: static
 	&--inline
 		display: inline
 		+respond-min($break-desktop-min)
