ZON-1568: Use appropriate SASS variables

--- a/sass/web.site/modules/video/_video-small.sass
+++ b/sass/web.site/modules/video/_video-small.sass
@@ -1,6 +1,6 @@
 .video-small
 	display: none
-	margin-bottom: $page-padding
+	margin-bottom: $vertical-space
 	+respond-min($break-phablet-min)
 		width: 48%
 		// going unBEMmish here, but hiding/displaying
