ZON-1822: increase browser support for hack

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -29,6 +29,7 @@
 		margin: 0 (-$page-padding) $petite
 		// this upsizes the fullwidth-image (ratio 2,35) appear to 16:9
 		// this is a temporary hack w/ magic number. it's not perfectly 16:9, because of margins and sh*t
+		width: 136% // for browsers without proper calc support
 		width: calc(135% + 2 * #{$page-padding})
 		max-width: none
 		+respond-min($break-tablet-min)
