--- a/sass/web.site/modules/centerpage/_ressort-heading.sass
+++ b/sass/web.site/modules/centerpage/_ressort-heading.sass
@@ -9,7 +9,7 @@
 		font-weight: 700
 		letter-spacing: $zon-letter-spacing-s
 		line-height: 1
-		margin-bottom: remify(14px)
+		margin: 0 0 remify(14px) 0
 		+respond-min($break-desktop-min)
 			font-size: remify(24px)
 	&__readmore-link
