--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -3,10 +3,12 @@
     {% for module in area.values() | map('get_module') -%}
         {% set teaser = module | first_child %}
         {% set layout = module | get_layout %}
+        {% set journalistic_format = module | get_journalistic_format %}
         {% set module_loop = loop %}
         {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/module/{0}_{1}.html".format(layout, area.kind),
+            ["zeit.web.site:templates/inc/teaser/{0}.tpl".format(journalistic_format),
+             "zeit.web.site:templates/inc/module/{0}_{1}.html".format(layout, area.kind),
              "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(layout, area.kind),
              "zeit.web.site:templates/inc/module/{}.html".format(layout),
              "zeit.web.site:templates/inc/teaser/{}.tpl".format(layout),
