--- a/src/zeit/web/magazin/templates/inc/article_area_nextread.html
+++ b/src/zeit/web/magazin/templates/inc/article_area_nextread.html
@@ -11,7 +11,7 @@ Available attributes:
 {%- set module = view.nextread -%}
 
 <aside class="article__nextread nextread-{{ module.layout.id }} is-centered">
-    <div class="article__nextread__lead">{{ module.lead }}</div>
+    <div class="article__nextread__lead">Lesen Sie jetzt</div>
     <div class="article__nextread__wrap">
         {{ cp.include_teaser(module, 'zmo-nextread-') }}
     </div>
