--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -53,7 +53,7 @@
             {% include "zeit.web.site:templates/inc/article/sharing-menu-items.tpl" %}
         </div>
     </div>
-    {% if view.nextread %}
+    {% if view.nextread and view.nextread.teasers %}
         {%- include "zeit.web.site:templates/inc/article/nextread.tpl" ignore missing -%}
     {% endif %}
 {% endblock %}
