--- a/src/zeit/web/magazin/templates/article.html
+++ b/src/zeit/web/magazin/templates/article.html
@@ -70,7 +70,7 @@
                     {%- include "zeit.web.magazin:templates/inc/article/comments.html" -%}
                 {% endblock article_comments %}
 
-                {% if view.nextread and view.nextread.teasers %}
+                {% if view.nextread %}
                     {%- include "zeit.web.magazin:templates/inc/article_area_nextread.html" ignore missing -%}
                 {% endif %}
             </div>
