--- a/src/zeit/web/site/templates/inc/area/topic.html
+++ b/src/zeit/web/site/templates/inc/area/topic.html
@@ -7,7 +7,7 @@
     {% include "zeit.web.site:templates/inc/teaser_asset/imagegroup_zon-topic.tpl" %}
     {% include
         ["zeit.web.site:templates/inc/teaser/zon-topic-main.tpl",
-         "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing with context %}
+         "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
     <div class="teaser-topic-list">
     {% for module in area.values()[0:3] -%}
         {% set teaser = module | first_child %}
