--- a/src/zeit/web/site/templates/column.html
+++ b/src/zeit/web/site/templates/column.html
@@ -40,7 +40,7 @@
 					{{ view.subtitle | hide_none }}
 				</div>
 				<div class="metadata metadata--column">
-					{% include "zeit.web.site:templates/inc/article/metadata.tpl" ignore missing %}
+					{% include "zeit.web.site:templates/inc/article/metadata.tpl" %}
 				</div>
 			</div>
 		</div>
