--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -1,4 +1,4 @@
-{% import 'zeit.web.core:templates/macros/layout_macro.tpl' as lama_core %}
+{% import 'zeit.web.site:templates/macros/layout_macro.tpl' as lama %}
 <!DOCTYPE html>
 <!--[if lt IE 7]> <html lang="de" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]> <html lang="de" class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -103,9 +103,9 @@
                                 }
                             </script>
                         </div>
-                        {{ lama_core.adplace(view.banner(1), view) }}
+                        {{ lama.adplace(view.banner(1), view) }}
                         <div id="iqd_rightAd">
-                            {{ lama_core.adplace(view.banner(2), view) }}
+                            {{ lama.adplace(view.banner(2), view) }}
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
             {% block liveblog_status %}{% endblock %}
             {% endprofile %}
             {% block adplace_billboard %}
-                {{ lama_core.adplace(view.banner(3), view) }}
+                {{ lama.adplace(view.banner(3), view) }}
             {% endblock adplace_billboard %}
             <main class="{{ 'main' |  with_mods(view.type) }}" id="main" role="main" itemprop="mainContentOfPage">
                 {% block main %}{% endblock main %}
