--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -2,7 +2,12 @@
 
 {% macro render_page(page) %}
     {% for item in page %}
-        {{ (blocks[item | block_type] or blocks["no_block"])(item) }}
+        {% set type = item | block_type %}
+        {% if type in ['place', 'contentadblock'] %}
+            {{ blocks[type](item, view) }}
+        {% else %}
+            {{ (blocks[type] or blocks["no_block"])(item) }}
+        {% endif %}
     {% endfor %}
 {% endmacro %}
 
