Further import tweaks

--- a/src/zeit/web/site/templates/content.html
+++ b/src/zeit/web/site/templates/content.html
@@ -1,3 +1,4 @@
+{% import 'zeit.web.site:templates/macros/article_macro.tpl' as blocks %}
 {% extends "zeit.web.site:templates/layout.html" %}
 
 {% block main %}
