--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -1,3 +1,5 @@
+{% import "zeit.web.core:templates/macros/layout_macro.tpl" as lama %}
+
 <div class="{{ 'cp-area' | with_mods(area.kind) }}">
     {% block before_module_list %}{% endblock %}
     {% for module in area.values() | map('get_module') -%}
