--- a/src/zeit/web/site/templates/inc/area/default.html
+++ b/src/zeit/web/site/templates/inc/area/default.html
@@ -7,12 +7,15 @@
         {% set module_loop = loop %}
         {% block before_module_include scoped %}{% endblock %}
         {% include
-            ["zeit.web.site:templates/inc/teaser/{0}.tpl".format(journalistic_format),
+            [
+             "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(layout, journalistic_format),
+             "zeit.web.site:templates/inc/teaser/{0}.tpl".format(journalistic_format),
              "zeit.web.site:templates/inc/module/{0}_{1}.html".format(layout, area.kind),
              "zeit.web.site:templates/inc/teaser/{0}_{1}.tpl".format(layout, area.kind),
              "zeit.web.site:templates/inc/module/{}.html".format(layout),
              "zeit.web.site:templates/inc/teaser/{}.tpl".format(layout),
-             "zeit.web.site:templates/inc/teaser/default.tpl"] ignore missing %}
+             "zeit.web.site:templates/inc/teaser/default.tpl"
+            ] ignore missing %}
         {% block after_module_include scoped %}{% endblock %}
     {% endfor %}
     {% block after_module_list %}{% endblock %}
