ZON-1822: add skeleton templates/styles for JOFO

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -31,6 +31,7 @@
 @import "modules/teaser/teaser-buzz"
 @import "modules/teaser/teaser-column"
 @import "modules/teaser/teaser-fullwidth"
+@import "modules/teaser/teaser-fullwidth-blog"
 @import "modules/teaser/teaser-topic"
 @import "modules/teaser/teaser-large"
 @import "modules/teaser/teaser-parquet-large"
