--- a/src/zeit/web/magazin/templates/inc/article/comments.html
+++ b/src/zeit/web/magazin/templates/inc/article/comments.html
@@ -63,8 +63,13 @@
 				<div class="comment__form__wrap">
 					<div class="comment__form__note">Bitte melden Sie sich an, um zu kommentieren.</div>
 				</div>
+				{% if request.registry.settings.sso_activate %}
+					<a href="{{ request.registry.settings.sso_url }}/anmelden?url={{ request.url|e }}" class="button">Anmelden</a>
+					<a href="{{ request.registry.settings.sso_url }}/registrieren?url={{ request.url|e }}" class="button">Registrieren</a>
+				{% else %}
 				<a href="{{ request.registry.settings.community_host }}/user/login?destination={{ request.url|e }}" class="button">Anmelden</a>
 				<a href="{{ request.registry.settings.community_host }}/user/register?destination={{ request.url|e }}" class="button">Registrieren</a>
+				{% endif %}
 			</form>
 			{% endif %}
 		{% endif %}
