ZON-1822: style blog-format

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -31,7 +31,6 @@
 @import "modules/teaser/teaser-buzz"
 @import "modules/teaser/teaser-column"
 @import "modules/teaser/teaser-fullwidth"
-@import "modules/teaser/teaser-fullwidth-blog"
 @import "modules/teaser/teaser-topic"
 @import "modules/teaser/teaser-large"
 @import "modules/teaser/teaser-parquet-large"
@@ -41,6 +40,9 @@
 @import "modules/teaser/teaser-small"
 @import "modules/teaser/teaser-small-minor"
 @import "modules/teaser/teaser-square"
+
+// journalistic format marker
+@import "modules/teaser/blog-format"
 
 // centerpage
 @import "modules/centerpage/centerpage"
