ZON-1822: styles for fullwidth blog teaser
in structure, inheritance, BEM, you name it…
this was a major PITA!

--- a/sass/web.site/modules/teaser/_blog-format.sass
+++ b/sass/web.site/modules/teaser/_blog-format.sass
@@ -5,6 +5,8 @@
 	+respond-min($break-tablet-min)
 		&--fullwidth
 			color: $white
+			position: absolute
+			top: remify(28px)
 
 	&__marker
 		+inline-block
@@ -15,7 +17,9 @@
 		margin: remify(0 2px 14px 0)
 		padding-bottom: remify(8px)
 		+respond-min($break-tablet-min)
-			border-color: $white
+			&--fullwidth
+				border-color: $white
+
 	&__name
 		font-family: $font-franziska
 		font-style: italic
