--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -3,13 +3,13 @@
 	border-bottom: 1px solid $zon_light_grey
 	padding-top: 0
 	+respond-min($break-tablet-min)
+		+teaser-image-text-shadow
 		border-bottom: none
 		margin-left: -$page-padding
 		margin-right: -$page-padding
 		overflow: hidden
 		padding: 0
 		position: relative
-		+teaser-image-text-shadow
 		&:before
 			content: ''
 			min-height: 100%
@@ -47,6 +47,8 @@
 			padding: 0 $twice $twice $twice
 			width: em(510px) + (2 * $twice)
 			z-index: 2
+			&--blog
+				top: 0
 		+respond-min($break-desktop-min)
 			padding: 0 0 $medium $medium
 			width: em(640px)
@@ -83,8 +85,11 @@
 			line-height: 1.232
 	&__combined-link
 		@extend %teaser-combined-link
-	// &__container
-	// not in use
+	&__container
+		+respond-min($break-tablet-min)
+			&--blog
+				bottom: remify(36px)
+				position: absolute
 	&__text
 		@extend %teaser-text
 		+respond-min($break-tablet-min)
