ZON-1822: move blog teaser kicker to abstract class
it's always the same, but it's always behind a BEM
modifier, so I just moved it to an abstract class,
which can be extended by the BEM-modified kicker,
so we can keep things DRY

--- a/sass/web.site/modules/teaser/_teaser-fullwidth.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth.sass
@@ -59,9 +59,9 @@
 		@extend %teaser-kicker
 		margin-bottom: remify(10px)
 		&--blog
+			@extend %teaser-kicker--blog
 			color: $zon_dark_grey
 			font-family: $font-franziska
-			font-size: remify(14px)
 			font-style: italic
 			font-weight: normal
 		+respond-min($break-tablet-min)
