--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -56,6 +56,12 @@
 	line-height: 1.2
 	margin-bottom: em(3px, 13px)
 
+%teaser-kicker--blog
+	color: $zon_dark_grey
+	font-family: $font-franziska
+	font-style: italic
+	font-weight: normal
+
 %teaser-combined-link
 	color: $color-text
 	display: block
