ZON-1822: styles & template for large blog teaser

--- a/sass/web.site/modules/teaser/_teaser-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-large.sass
@@ -8,9 +8,11 @@
 	&__kicker
 		@extend %teaser-kicker
 		margin-bottom: remify(8px)
+		&--blog
+			@extend %teaser-kicker--blog
 	&__title
 		@extend %teaser-title
-		font-size: remify($font-mxxl--px)
+		font-size: remify(28px)
 	&__media
 		@extend %teaser-media
 	&__media-item
