ZON-1822: all the things for small blog teaser

--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -13,6 +13,8 @@
 		@extend %teaser-combined-link
 	&__kicker
 		@extend %teaser-kicker
+		&--blog
+			@extend %teaser-kicker--blog
 	&__title
 		@extend %teaser-title
 	&__text
